--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weatherchamp</title>
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
   <body>
-    <form action="submit" class="input-form">
+    <form class="input-form">
       <input type="text" id="city-input" placeholder="Enter your city" />
       <button type="submit">Get Weather</button>
     </form>
+    <div class="errorMsg" style="display: none"></div>
     <div class="container">
       <h3 class="appHeading">Weatherchamp</h3>
       <div class="city-date">
@@ -29,7 +30,7 @@
       <div class="data-cont">
         <div class="coordinates-cont">
           <i class="fa-regular fas fa-location-arrow"></i>
-          <p id="coordinates">Lon: 80.27 <br />Lat: 13.08</p>
+          <p id="coordinates">Lat: 23.18 <br />Lon: 82.97</p>
         </div>
         <div class="wind-cont">
           <i class="fa-regular fas fa-wind"></i>
